--- a/molo/usermetadata/test_templates/base.html
+++ b/molo/usermetadata/test_templates/base.html
@@ -33,8 +33,7 @@
       {% if settings.core.SiteSettings.ga_tag_manager %}
       <!-- Google Tag Manager -->
       {% persona_selected as persona_selected_value %}
-      <noscript><iframe src="//www.googletagmanager.com/ns.html?id={{settings.core.SiteSettings.ga_tag_manager}}{% if persona_selected_value%}&
-        persona={{ persona_selected_value }}{% endif %}"
+      <noscript><iframe src="//www.googletagmanager.com/ns.html?id={{settings.core.SiteSettings.ga_tag_manager}}{% if persona_selected_value%}&persona={{ persona_selected_value }}&event=persona{% endif %}"
       height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
       new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -45,7 +44,7 @@
 
       {% if persona_selected_value %}
         <script type="text/javascript">
-          dataLayer.push({'persona': '{{ persona_selected_value }}'});
+          dataLayer.push({'persona': '{{ persona_selected_value }}', 'event': 'persona'});
         </script>
       {% endif %}
       {% endif %}
